# oeis_misc

./: .gitignore  .travis.yml  A294381.py  README.md  TODO.md  basic.py  partition_head_median.py  utils.py
c/: .gitignore  a003679.c
c/acute/: search.c
c/acute/data/: 9.txt
data/: A269804.txt  A269805.txt  A269806.txt  A269807.txt  A269808.txt  A269809.txt  A270000.txt  A294381.txt
data/erroneous/: A270000_incorrect_filtering_of_unique_tuples.txt
python/: fractility.ipynb
python/mathy/: comb.py
python/one_off/: download_groups.py  fractility.py  modal_reach.py
python/sequences/: A007001.py  A233694.py  basic.py  fractility.py  probability.py  simple.py  transform.py
python/snippets/: fractility.py
python/utils/: checking.py  data.py  output.py
sequences/: A294381.py  __init__.py  basic.py  fractility.py  sequences.cabal  simple.py
sequences/speculative/: e.py
sequences/src/: A003815.hs  A117065.hs  A256535.hs  Basic.hs  Catalogue.hs  Complex.hs  Constant.hs  Digit.hs  FloatRelated.hs  Graph.hs  Main.hs  Morphism.hs  Number.hs  Output.hs  Partition.hs  Simple.hs  Summand.hs  Transform.hs
sequences/submitted/: A233695.hs  A236970.hs  A316343.hs  A316344.hs  A316345.hs  A316824.hs
sequences/test/: BasicSpec.hs  CatalogueSpec.hs  ComplexSpec.hs  DigitSpec.hs  GraphSpec.hs  MorphismSpec.hs  NumberSpec.hs  OutputSpec.hs  PartitionSpec.hs  SimpleSpec.hs  SummandSpec.hs  TestNumber.hs  Tests.hs  TransformSpec.hs
