name:                sequences
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sequences#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sequence
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split
  other-modules:       Basic, Constant, Simple, Number, Output, Catalogue, Summand, Transform, A117065

library
  hs-source-dirs:
      src
  build-depends:
      base, split
  exposed-modules:
      Number, Transform, Catalogue, Summand, Output, A117065
  other-modules:
      Basic, Simple
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      sequences
    , base
    , hspec
  other-modules:
      NumberSpec, TransformSpec, CatalogueSpec, OutputSpec
  default-language: Haskell2010
